--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Minesweeper Game</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/main.css">
+		<!-- build:css -->
+			<link rel="stylesheet" href="vendor/css/bootstrap.css">
+			<link rel="stylesheet" href="css/main.css">
+		 <!-- endbuild -->
 	</head>
 	<body>
 		<div id='content' class='container-fluid'>
@@ -12,15 +14,17 @@
  			 	 <div class="col-sm" id='content'></div>
  			 </div>
 		</div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.0/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.js"></script>
-		<script src="js/override.js"></script>
-		<script src="js/app.js"></script>
-		<script src="js/model.js"></script>
-		<script src="js/viewHelpers.js"></script>
-		<script src="js/view.js"></script>
-		<script src="js/Minespweeper.js"></script>
-		
+		 <!-- build:js -->
+			<script src="vendor/js/jquery.js"></script>
+			<script src="vendor/js/handlebars.js"></script>
+			<script src="js/override.js"></script>
+			<script src="js/app.js"></script>
+			<script src="js/model.js"></script>
+			<script src="js/viewHelper.js"></script>
+			<script src="js/view.js"></script>
+			<script src="js/Minespweeper.js"></script>
+		 <!-- endbuild -->
+
 		<script id="main-template" type="text/x-handlebars-template">
 			<div class="nav_fix"></div>
 			<div class='new-game-button'><button class="btn btn-primary">New Game</button></div>
